--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Pokemon Memory Card Game made with react and PokeApi"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,7 +27,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>React Memory Card</title>
+    <title>PokeMemory Card Game</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
